--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ygl (4.2e-2) unstable; urgency=low
+
+  * debian/control: added libglu1-mesa-dev as build-dependency. This 
+  should fix the buildd errors.
+
+ -- Ramakrishnan Muthukrishnan <rkrishnan@debian.org>  Sun, 13 Jan 2008 11:19:23 +0530
+
 ygl (4.2e-1) unstable; urgency=low
 
   * Initial release (Closes: #457208)
