--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ygl (4.2e-3) unstable; urgency=low
+
+  * debian/control: added xbitmaps as build-dependency.
+
+ -- Ramakrishnan Muthukrishnan <rkrishnan@debian.org>  Sun, 13 Jan 2008 11:44:13 +0530
+
 ygl (4.2e-2) unstable; urgency=low
 
   * debian/control: added libglu1-mesa-dev as build-dependency. This 
