--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ygl (4.2e-6.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Rename libraries for 64-bit time_t transition.  Closes: #1063304
+
+ -- Steve Langasek <vorlon@debian.org>  Thu, 29 Feb 2024 08:11:50 +0000
+
 ygl (4.2e-6) unstable; urgency=medium
 
   * QA upload.
